--- a/partials/header.html
+++ b/partials/header.html
@@ -11,9 +11,20 @@
       />
     </a>
     <nav aria-label="Navegación principal">
-      <a href="#proyectos">Proyectos</a>
-      <a href="#sobre-mi">Sobre mí</a>
-      <a href="#contacto">Contacto</a>
+      <button
+        class="nav-toggle"
+        type="button"
+        aria-expanded="false"
+        aria-controls="nav-links"
+      >
+        Menú
+      </button>
+      <ul class="nav-links" id="nav-links">
+        <li><a href="#proyectos">Proyectos</a></li>
+        <li><a href="#sobre-mi">Sobre mí</a></li>
+        <li><a href="#skills">Habilidades</a></li>
+        <li><a href="#contacto">Contacto</a></li>
+      </ul>
     </nav>
   </div>
 </header>
